Fix extra padding below checkbox

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -311,6 +311,7 @@ input[type=radio]:checked + label {
 }
 label {
   margin-bottom: 0;
+  display: block;
 }
 
 /* Mobile styles */
